--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon ./dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "npx eslint src/**/*.ts --fix"
   },
   "keywords": [],
   "author": "hasibmuhammad <hasibmu99@gmail.com>",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.15.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "globals": "^15.12.0",
     "nodemon": "^3.1.7",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
@@ -24,6 +32,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "eslint": "9.14.0",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
     "prettier": "^3.3.3"
