--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon ./dist/server.js",
+    "dev": "tsnd --respawn ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npx eslint src/**/*.ts --fix"
